--- a/nextgendancecamp.css
+++ b/nextgendancecamp.css
@@ -3,3 +3,70 @@ body {
   background-color: #465ba3;
   color: white
 }
+
+div.header{
+    width: 640px;
+}
+
+h1.header{
+    color: white;
+    font-size: 48pt;
+    margin: 10px;
+    font-weight: normal;
+    font-color: white;
+}
+
+.wrapper{
+    width: 1000px;
+    margin-left:auto;
+    margin-right:auto;
+    padding: 0px;
+}
+
+.tech-text{
+    text-align: center;
+    color: #E0B2E0;
+}
+
+.content{
+    padding: 10px;
+}
+
+table.wrapper{
+    border-spacing: 0px;
+    padding: 0px
+}
+
+td.nospace{
+    padding: 0px
+}
+
+.sidebar{
+    width: 160px;
+    vertical-align: top;
+}
+
+.sidebar-link{
+    color: #FFFFFF;
+    margin-top: 2px;
+    margin-bottom: 5px;
+    padding-left: 10px;
+}
+
+.sidebar-link:hover{
+    background-color: #82a3d8;
+}
+
+.link-text{
+    text-decoration: none;
+    color: #290029;
+}
+
+.tech-link{
+    color: #833083;
+}
+
+.divider{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
