--- a/nextgendancecamp.css
+++ b/nextgendancecamp.css
@@ -2,10 +2,20 @@ body {
   font-family: Sans-Serif;
   background-color: #354582;
   color: #d7ddf2;
+  margin: 0px;
 }
 
 div.header{
+    width: 100%;
+    height: 270px;
+    background-image: url('/img/stars_short.jpg');
+    position: relative;
+}
+
+div.header-inner{
     width: 640px;
+    margin-left: 200px;
+    margin-right: auto;
 }
 
 h1.header{
@@ -13,9 +23,15 @@ h1.header{
     font-weight: normal;
 }
 
-.wrapper{
+.subheader{
+    position: absolute;
+    bottom: 0px;
+    left: 200px;
+}
+
+div.wrapper{
     width: 1000px;
-    margin-left:auto;
+    margin-top: 40px;
     margin-right:auto;
     padding: 0px;
 }
@@ -38,9 +54,14 @@ td.nospace{
     padding: 0px
 }
 
-.sidebar{
-    width: 160px;
+td.sidebar{
     vertical-align: top;
+}
+
+div.sidebar{
+    width: 160px;
+    margin-left: 0px;
+    margin-right: 40px;
 }
 
 .sidebar-link{
