--- a/nextgendancecamp.css
+++ b/nextgendancecamp.css
@@ -50,7 +50,7 @@ div.wrapper{
     padding: 0px;
 }
 
-h3 {
+h3, h2 {
     color: var(--section-header-color);
     font-family: var(--header-font);
 }
