Change body font

--- a/nextgendancecamp.css
+++ b/nextgendancecamp.css
@@ -7,7 +7,7 @@
     --sidebar-link-color: #0c404f;
 
     --header-font: 'Audiowide', sans-serif;
-    --body-font: 'PT Serif', serif;
+    --body-font: 'Quattrocento', serif;
 }
 
 body {
