Change body font again

--- a/nextgendancecamp.css
+++ b/nextgendancecamp.css
@@ -6,7 +6,7 @@
     --main-text-color: #065F8B;
 
     --header-font: 'Audiowide', sans-serif;
-    --body-font: 'Quattrocento', serif;
+    --body-font: 'Montserrat', sans-serif;
 }
 
 body {
