--- a/nextgendancecamp.css
+++ b/nextgendancecamp.css
@@ -32,6 +32,7 @@ h1.header{
     font-size: 48pt;
     font-weight: normal;
     color: var(--header-text-color);
+    margin-top: 0;
 }
 
 .subheader{
