--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
                 <td class="sidebar">
                     <div class="sidebar nospace">
                         <a href="/index.html" class="link-text"><h2>Home</h2></a>
+                        <a href="/registration.html" class="link-text"><h2>Registration</h2></a>
                         <a href="/email_list.html" class="link-text"><h2>Email List</h2></a>
                     </div>
                 </td>
