Add larks and ravens statement to the website

--- a/nextgendancecamp.css
+++ b/nextgendancecamp.css
@@ -27,8 +27,12 @@ div.header-inner{
     margin-right: auto;
 }
 
-h1.header{
+h1 {
     font-family: var(--header-font);
+    color: var(--section-header-color);
+}
+
+h1.header{
     font-size: 48pt;
     font-weight: normal;
     color: var(--header-text-color);
@@ -58,7 +62,7 @@ h3, h2 {
     font-weight: normal;
 }
 
-p{
+p, li{
     line-height: 1.5;
     color: var(--main-text-color);
     font-family: var(--body-font);
