--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <div class="header">
         <div class="header-inner">
             <h1 class="header">Next Generation Dance Camp</h1>
-            <h2 class="subheader">October 5-7, 2018  •  Mt. Hood Kiwanis Camp </h2>
+            <h2 class="subheader">Mt. Hood Kiwanis Camp </h2>
         </div>
     </div>
     <div class="wrapper">
